pinode/app/static/style.css
body {
  padding-top: 70px;
}
.starter-template {
  padding: 40px 15px;
  text-align: center;
}
.header-status {
  color:rgb(10, 180, 52);
  font-size: 80%
}
.header-nodeip, .header-nodeip:hover {
  color: rgb(96, 96, 96) ! important;
}

.top-nodeinfo {
  color: white !important;
  top: 50px;
}

.dragarea-enter, .dragarea-exit {
  margin-top: 10px;
}

.list-group {
}
.icon {
  font-size:110%;
}
.icon-bulb {
  font-size:115%;
  margin-right: 10px;
  margin-left: 5px;
}
.bulb-power-status.active {
  /*color: rgb(255, 230, 0);*/
}

.item-menu > button {
 width: 25px;
}
.lifx-inline-form {
  margin-top: 10px;
}
.item-inline-form-bottom {
  margin-bottom: 10px;
}
.list-group > li {
    border:1px solid;
  border-color: #ccc ! important;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);

  background: rgb(254, 254, 254)
}
/*.list-group > li:hover {
  background: rgb(237, 237, 237)
}*/

.bar {
  width: 800px;
}
.bar-title {
  font-weight: bold;
}

.inline-small {
  width:50px;
}

.tabarea {
  margin-top:20px;
}

.bg-tab {
  margin-top: 15px;
}


.item-menu {
  float: right
}


.btn-notrunning {
  cursor: inherit;
}

.btn-stopsketch{
  display: none;
}


.sel-inline {
  display: inline;
}
.sel-lifix-fix {
  margin-top: 9px !important;
}
.script-cmd {
  min-width: 300px;
}
.sketchitem {
  min-height: 35px;
}


.sketchitem > .item-detail {
  margin-top: 15px;
  font-size: 12px!important;
  font-weight: normal!important;
  display: none;
}
.item-item-name {
  float: left;
  width: 60px;
  opacity: 0.7;
  cursor: pointer;
}
 .item-icon {
  cursor: pointer;
}
input.item-desc {
  border:none;
  color: #000;
  background: transparent;
  width: 60%;
}

input.item-desc:focus {
  border:none;
  outline: 0;
}




.liitemgw, .sketchitem{
  margin: 0;
  margin-bottom:0;
  border: 1px solid  #e6e6e6;
  border-bottom: none;
  padding: 6px;
  font-weight: bold;
  font-size: 1.2em;
}


.liitemgw-item:nth-of-type(even), .sketchitem-item:nth-of-type(even){
  background-color: #f9f9f9;
}
.liitemgw-item:nth-of-type(odd), .sketchitem-item:nth-of-type(odd){
  background-color: #fff;
}

.liitemgw:first-child, .sketchitem:first-child{
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.liitemgw:last-child, .sketchitem:last-child {
  border-bottom: 1px solid  #e6e6e6;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

.sketchitem-item{
  padding: 11px;
}

.dragarea-enter, .dragarea-exit {
  margin-top: 25px;
}
.icon-item {
  display: block;
  float: left;
  width: 25px;
  opacity: 0.1;
}

.lamp-title > div {
  float: left;
  height: auto;
}

.lamp{
  padding: 6px;
  min-height: 35px;
}
.lampcname {
  color: rgb(157, 157, 157);
}
.lx-name,.lx-lampip,.lx-lampid {
  margin-left: 15px;
}
.lx-lampip,.lx-lampid {
  margin-right: 10px;
}
.liitemgw-title {
  font-weight: bold;
  padding: 6px;
  border: none;
}
.cls {
  clear: both;
}

.lamp-items, .nodes {
  margin-top: 30px;
}

.lamp-detail {
  font-size: 12px;
  font-weight: normal;
  padding: 12px;
  display: none;
}
.bulb-lx-status {
  color: rgb(170, 1, 1);
}
.bulb-lx-status.active {
   color: rgb(19, 170, 1);
 }


.node-status, .node-status.undefined {
  color: rgb(187, 187, 187);
}

.node-status.ok {
  color: rgb(19, 170, 1);
}

.node-status.active {
   color: rgb(170, 1, 1);
}

.node-status.fail {
  color: rgb(45, 6, 237);
}

.nodename.fail {
  color: rgb(187, 187, 187);
}
.itm-node {
  margin-top: 5px;
}

.node-ctrl {
  display: none;
}

.itm-node-inline {
  float: left;
  display: inline-block;
}
.itm-node-inline.node-status {
  margin-right: 15px;
  margin-top: 5px;
}
.itm-node-inline.nodename {
  margin-top: 3px;
  margin-right: 15px;
}
.itm-node-inline-parent {
  min-width: 40%;
}

